# BookTrackerApp-SQRS-S26

./: .dockerignore  .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
docs/: locust_report.html
frontend/: README.md  __init__.py  app.py  shared.py
frontend/pages/: 0_login.py  1_my_books.py  2_add_book.py  3_search.py  4_progress.py
pages/: 0_login.py  1_my_books.py  2_add_book.py  3_search.py  4_progress.py
scripts/: check_complexity.py  run_frontend_dark.ps1  run_frontend_light.ps1
src/: database.py  main.py  models.py  schemas.py
src/routers/: auth.py  books.py  openlibrary.py  progress.py  search.py
src/services/: auth_service.py  book_service.py  openlibrary_service.py  progress_service.py  search_service.py
tests/: conftest.py  test_auth.py  test_auth_protection.py  test_books.py  test_openlibrary.py  test_progress.py  test_schemas.py  test_search.py
tests/integration/: test_api.py  test_auth_api.py  test_books_api.py  test_e2e.py  test_openlibrary_api.py  test_progress_api.py  test_search_api.py
tests/unit/: test_auth.py  test_books.py  test_openlibrary.py  test_progress.py  test_search.py
