[project]
name = "book-tracker"
version = "0.1.0"
description = "BookTracker App"
authors = [
    {name = "Baha Alimi",email = "a.alimi@innopolis.university"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "streamlit (>=1.55.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "bandit[toml] (>=1.9.4,<2.0.0)",
    "radon (>=6.0.1,<7.0.0)",
    "mutmut (>=3.5.0,<4.0.0)",
    "hypothesis (>=6.151.10,<7.0.0)",
    "locust (>=2.43.3,<3.0.0)"
]
